TranslationService class completed, TextToSpeech class renamed and refactored